--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,6 @@
 			<version>2.45.0</version>
 		</dependency>
 		<dependency>
-			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>selenium-chrome-driver</artifactId>
-			<version>2.45.0</version>
-		</dependency>
-		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
 			<version>2.2</version>
@@ -61,6 +56,9 @@
 								<resource>
 									<directory>src/resources</directory>
 									<filtering>true</filtering>
+									<includes>
+										<include>log4j2.xml</include>
+									</includes>
 								</resource>
 							</resources>
 						</configuration>
